--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "isbot": "5.1.26",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.6.3"
+    "react-router": "7.6.3",
+    "react-qr-code": "2.0.15"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
