--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -25,6 +25,9 @@
       "zone_name": "defenceparty.rsvp"
     }
   ],
+  "triggers": {
+    "crons": ["*/5 * * * *"]
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
